add coord convert func

--- a/rotation.ipynb
+++ b/rotation.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import geometry\n",
     "import numpy as np\n",
     "import copy\n",
+    "\n",
     "import matplotlib.pyplot as plt\n"
    ]
   },
@@ -91,6 +92,46 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def coord_convert(l_points, x_w, y_h, z_d):\n",
+    "    l_points = np.array(l_points)\n",
+    "    l_points = l_points / [x_w, y_h, z_d] * 2 - 1\n",
+    "    return l_points\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1.   -1.   -1.  ]\n",
+      " [-0.75 -0.5  -1.  ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test coord_convert\n",
+    "l_points = [[0, 0, 0], [20, 40, 0]]\n",
+    "x_w, y_h, z_d = 160, 160, 160\n",
+    "print(coord_convert(l_points, x_w, y_h, z_d))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
