edit coord convert func

--- a/rotation.ipynb
+++ b/rotation.ipynb
@@ -37,7 +37,7 @@
     "        else: \n",
     "            slice = transformed_array[:, :, idx]\n",
     "\n",
-    "        l_intersect_points = []\n",
+    "        l_intersect_points = set()\n",
     "\n",
     "        # get list of intersection points on the slice\n",
     "        for i in range(len(prompting_points) - 1):\n",
@@ -48,8 +48,9 @@
     "            l_intersect_points.append(intersection_point)\n",
     "\n",
     "        if l_intersect_points is not None:\n",
-    "            mask = get_mask(slice, l_intersect_points, model)\n",
-    "            incomplete_mask[idx, :, :] = mask\n",
+    "            # mask = get_mask_points(slice, l_intersect_points, model)\n",
+    "            # incomplete_mask[idx, :, :] = mask\n",
+    "            pass\n",
     "            \n",
     "    complete_mask = reconstrct_3D_mask(incomplete_mask)\n",
     "    \n",
@@ -83,55 +84,16 @@
     "    return mask_points\n",
     "\n",
     "\n",
-    "# interpolation? not sure if we want to do interpolation\n",
-    "# in the original matrix\n",
     "def reconstrct_3D_mask(incomplete_mask):\n",
     "    complete_mask = np.zeros_like(incomplete_mask)\n",
     "    return complete_mask\n",
     "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def coord_convert(l_points, x_w, y_h, z_d):\n",
     "    l_points = np.array(l_points)\n",
     "    l_points = l_points / [x_w, y_h, z_d] * 2 - 1\n",
-    "    return l_points\n"
+    "    return l_points\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-1.   -1.   -1.  ]\n",
-      " [-0.75 -0.5  -1.  ]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# test coord_convert\n",
-    "l_points = [[0, 0, 0], [20, 40, 0]]\n",
-    "x_w, y_h, z_d = 160, 160, 160\n",
-    "print(coord_convert(l_points, x_w, y_h, z_d))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
