--- a/rotation.ipynb
+++ b/rotation.ipynb
@@ -15,6 +15,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_image(filename):\n",
+    "    # read 3d image and convert to np\n",
+    "    image = plt.imread(filename)\n",
+    "    return image\n",
+    "\n",
+    "def slice_image_prompt(image, axis, transform):\n",
+    "    # given the transform, we know the rotation angle\n",
+    "    # we can slice the image at the angle\n",
+    "    # and add prompts (assum there is func for add_prompt)\n",
+    "    \n",
+    "    transformed_image, _ = transform.apply(image, padwith=0)\n",
+    "    # only get the middle slice\n",
+    "    if axis == 0:\n",
+    "        slice = transformed_image[transformed_image.shape[0]//2, :, :]\n",
+    "    elif axis == 1:\n",
+    "        slice = transformed_image[:, transformed_image.shape[1]//2, :]\n",
+    "    else:\n",
+    "        slice = transformed_image[:, :, transformed_image.shape[2]//2]\n",
+    "\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
    "outputs": [],
