add slice_image func

--- a/rotation.ipynb
+++ b/rotation.ipynb
@@ -19,27 +19,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# load image in format of np array\n",
     "def load_image(filename):\n",
     "    # read 3d image and convert to np\n",
     "    image = plt.imread(filename)\n",
     "    return image\n",
     "\n",
+    "# given the transform (rotation angle) and axis, \n",
+    "# slice the image and add prompt points\n",
     "def slice_image_prompt(image, axis, transform):\n",
-    "    # given the transform, we know the rotation angle\n",
-    "    # we can slice the image at the angle\n",
-    "    # and add prompts (assum there is func for add_prompt)\n",
-    "    \n",
+    "\n",
     "    transformed_image, _ = transform.apply(image, padwith=0)\n",
+    "    prompts = []\n",
     "    # only get the middle slice\n",
     "    if axis == 0:\n",
     "        slice = transformed_image[transformed_image.shape[0]//2, :, :]\n",
+    "        prompts = add_prompt(slice)\n",
     "    elif axis == 1:\n",
     "        slice = transformed_image[:, transformed_image.shape[1]//2, :]\n",
+    "        prompts = add_prompt(slice)\n",
     "    else:\n",
     "        slice = transformed_image[:, :, transformed_image.shape[2]//2]\n",
+    "        prompts = add_prompt(slice)\n",
+    "    \n",
+    "    # make sure prompts is a list of 3d points\n",
+    "    ori_prompts = transform.apply_to_points(prompts, inverse=True)\n",
     "\n",
-    "    \n",
-    "    \n",
+    "    return ori_prompts\n",
+    "\n",
+    "\n",
+    "def add_prompt(slice):\n",
+    "    # add prompts to the slice\n",
+    "    pass\n",
+    "\n",
     "\n",
     "    "
    ]
