--- a/scale_transform.ipynb
+++ b/scale_transform.ipynb
@@ -18,9 +18,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# scale to zero centric cube\n",
     "def scale_forward (point, shape):\n",
     "    return point / np.array(shape) * 2 - 1\n",
     "\n",
+    "# scale to matrix index\n",
     "def scale_backward (point, shape):\n",
     "    return (point + 1) / 2 * np.array(shape)\n",
     "\n",
@@ -47,6 +49,7 @@
     "    transform_point = transform.apply_to_point(scaled_point, inverse=True)\n",
     "    return transform_point\n",
     "\n",
+    "# zero centric cube to matrix index\n",
     "def coord_to_index (point, transform, shape):\n",
     "    transform_point = transform.apply_to_point(point)\n",
     "    scaled_point = scale_backward(transform_point, shape)\n",
